# carla-loader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: config.json  config.toml
crates/actor_factory/: Cargo.toml
crates/actor_factory/src/: carla_client.rs  carla_sensor_source.rs  client.rs  error.rs  factory.rs  lib.rs  mock_client.rs  mock_sensor.rs  replay_sensor.rs  sensor_data_converter.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  error.rs  main.rs
crates/cli/src/commands/: info.rs  mod.rs  run.rs  validate.rs
crates/cli/src/pipeline/: mod.rs  orchestrator.rs  stats.rs
crates/config_loader/: Cargo.toml
crates/config_loader/examples/: full.toml  minimal.toml
crates/config_loader/src/: lib.rs  parser.rs  validator.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: blueprint.rs  error.rs  lib.rs  runtime.rs  sensor.rs  sensor_id.rs  sensor_source.rs  sink.rs  sync.rs  sync_engine_config.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: dispatcher.rs  error.rs  handle.rs  lib.rs  metrics.rs
crates/dispatcher/src/sinks/: file.rs  log.rs  mod.rs  network.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: adapter.rs  config.rs  error.rs  generic_adapter.rs  lib.rs  mock.rs  pipeline.rs
crates/ingestion/src/adapters/: camera.rs  common.rs  gnss.rs  imu.rs  lidar.rs  macros.rs  mod.rs  radar.rs
crates/observability/: Cargo.toml  README.md
crates/observability/src/: lib.rs  metrics.rs
crates/sync_engine/: Cargo.toml
crates/sync_engine/src/: adakf.rs  buffer.rs  engine.rs  lib.rs  window.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
docs/: architecture.md
docs/design/: actor_factory.md  config_schema.md  dispatcher_sinks.md  ingestion_pipeline.md  observability_spec.md  sync_engine_design.md  sync_engine_test_plan.md
docs/research/: carla_integration_survey.md  config_survey.md  ffi_ingestion_survey.md  observability_survey.md  output_sinks_survey.md  repo_survey.md  sync_engine_gap_analysis.md  sync_engine_pdf_requirements.md
examples/: Cargo.toml  complete_pipeline.rs  mock_pipeline.rs  real_carla_pipeline.rs
scripts/: record_carla.py
spec/: 00_orchestrator_tech_lead.md  01_config_loader_agent.md  02_actor_factory_agent.md  03_ingestion_ffi_agent.md  04_sync_engine_agent_pdf_spec.md  05_dispatcher_sinks_agent.md  06_observability_reliability_agent.md  07_qa_systems_test_agent.md
