[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/config_loader",
    "crates/actor_factory",
    "crates/ingestion",
    "crates/sync_engine",
    "crates/dispatcher",
    "crates/observability",
    "crates/cli",
    "crates/tests",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
bytes = { version = "1.11.0", features = ["serde"] }
tracing = "0.1.44"
serde_json = "1.0.145"
metrics = "0.24.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
