[package]
name = "config_loader"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.8"
serde_json = { workspace = true }
validator = { version = "0.20", features = ["derive"] }
