[package]
name = "contracts"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
trait-variant = "0.1.2"
serde_bytes = "0.11.19"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
