[package]
name = "dispatcher"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3.3"
chrono = "0.4.42"
image = "0.25.9"

[dev-dependencies]
tempfile = "3.23.0"
