[package]
name = "ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }

# CARLA 客户端（可选，仅在需要真实 CARLA 连接时启用）
carla = { version = "0.13.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
rand = "0.9.2"

[features]
default = ["real-carla"]
# 启用真实 CARLA 客户端
real-carla = ["carla"]
