[package]
name = "ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
bytemuck = { version = "1.22", features = ["derive"] }
async-channel = "2.3"

# CARLA 客户端（可选，仅在需要真实 CARLA 连接时启用）
carla = { version = "0.13.0", optional = true }

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["real-carla"]
# 启用真实 CARLA 客户端
real-carla = ["carla"]
