[package]
name = "sync_engine"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }
observability = { path = "../observability" }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
nalgebra = "0.34.1"
metrics = { workspace = true }
ringbuf = "0.4"
slab = "0.4"
